--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -65,7 +65,7 @@ In order to participate during class, you must bring a laptop with you. If you d
 
 In this course, you will complete a series of hands-on exercises and assessments. For the exercises, you will have **weekly assignments** in addition to a [**midterm project**](projects/midterm-project.html) and [**final project**](projects/final-project.html). You will also present your final project to the class. For the other assessments, you will complete **weekly quizzes** as well as a **final exam**. The weekly assignments and quizzes are low-stakes opportunities to build your skills and test your knowledge. The projects and final exam are designed to showcase what you have learned.
 
-Boston College defines credit hours in terms of how much in- and out-of-class time is spent on a course per week. You should expect to spend a minimum of 6 out-of-class hours per week on this 3-credit course.
+Boston College defines credit hours in terms of how much in- and out-of-class time is spent on a course per week. You should expect to spend a minimum of 6 out-of-class hours per week on this 3-credit course. Much of your learning will occur as you work through the assignments outside of the classroom.
 
 Your **active participation** during class will be an important way of demonstrating your learning. You will receive full participation credit if you make, on average, one substantive contribution per class discussion and actively participate in all of the in-class activities.
 
@@ -85,7 +85,7 @@ Your **active participation** during class will be an important way of demonstra
 
 Final grades will be based on your total points, rounded to the nearest whole number: A: 94-100, A-: 90-93, B+: 87-89, B: 84-86, B-: 80-83, C+: 77-79, C: 74-76, C-: 70-73, D+: 67-69, D: 64-66, D-: 60-63, F: below 60.
 
-Assignments are subject to a 5%-per-day penalty for each day that they are late. Every student will be allowed one "free" late turn-in that they can use for any of the weekly assignments. Assignments will generally be due by noon the day before class.
+Assignments and projects are subject to a 5%-per-day penalty for each day that they are late. Every student will be allowed one "free" late turn-in that they can use for any of the weekly assignments. Assignments will generally be due by noon the day before class.
 
 Grading for the weekly assignments will be based on satisfactory completion. In other words, you will get full credit as long as you have completed the assignment on time and, by my assessment, would have earned at least a 70% on it. Note that the midterm project and final project will be fully graded following a separate rubric.
 
