--- a/modules/02_programming-foundations-1.qmd
+++ b/modules/02_programming-foundations-1.qmd
@@ -19,13 +19,15 @@ Don't worry, each chapter is short!
 
 ## In-class exercises
 
-We will follow along with the examples given in the textbook. Create an R project called `programming-foundations` for this section of the course, and save today's work in a notebook called `part-1.Rmd`.
+We will follow along with the examples given in the textbook. Create an R project called `programming-foundations` for this section of the course, and save today's work in an R markdown report called `part-1.Rmd`.
+
+**Key concepts:** character, numeric, vector, element, logical, for loop, while loop, if statement, `<-` vs `=` vs `==`
 
 ## Weekly assignment
 
-First, make sure you have completed all of the exercises in the above chapters. We will have already completed most of them in class. All of the solutions should be included in your R notebook. Then, solve these additional problems using the concepts you have learned in class. For now, you should avoid using other predefined functions unless noted below.
+First, make sure you have completed all of the exercises in the above chapters. We will have already completed most of them in class. All of the solutions should be included in your R markdown report. Then, solve these additional problems using the concepts you have learned in class. For now, you should avoid using other predefined functions unless noted below.
 
-As always, your R notebook should be organized with headings and comments explaining your work.
+As always, your R markdown report should be organized with headings and comments explaining your work.
 
 1. Write code that will place the numbers 1 to 100 separately into a variable using a for-loop. Then, look up the `seq()` function and use this function to do the same thing.
 2. Find the sum of all the integer numbers from 1 to 100.
