--- a/projects/midterm-project.qmd
+++ b/projects/midterm-project.qmd
@@ -2,6 +2,6 @@
 title: "Midterm Project"
 ---
 
-The midterm project will give you an opportunity to showcase your new skills in programming, drawing on concepts from the first half of the class. You will write code to solve computational problems, integrating what you've learned about variables, loops, functions, etc. This will give you practice in breaking down larger problems into its component parts, and developing an algorithm to step through the problem. You will also share your code and the output in an R notebook. The midterm project will be graded according to its completeness, accuracy, and clear presentation of the code and results.
+The midterm project will give you an opportunity to showcase your new skills in programming, drawing on concepts from the first half of the class. You will write code to solve computational problems, integrating what you've learned about variables, loops, functions, etc. This will give you practice in breaking down larger problems into its component parts, and developing an algorithm to step through the problem. You will also share your code and the output in an R markdown report. The midterm project will be graded according to its completeness, accuracy, and clear presentation of the code and results.
 
 Problems will be drawn from this list of [Practice Problems](https://www.crumplab.com/rstatsforpsych/practice-problems.html). More details to come.
