--- a/modules/03_programming-foundations-2.qmd
+++ b/modules/03_programming-foundations-2.qmd
@@ -15,13 +15,15 @@ You should read these chapters before you come to class:
 
 ## In-class exercises
 
-We will follow along with the examples given in the textbook. Open the R project called `programming-foundations`, and save today's work in a notebook called `part-2.Rmd`.
+We will follow along with the examples given in the textbook. Open the R project called `programming-foundations`, and save today's work in an R markdown report called `part-2.Rmd`.
+
+**Key concepts:** function, algorithm, pseudo code
 
 ## Weekly assignment
 
-First, make sure you have completed all of the exercises in the above chapters. We will have already completed most of them in class. All of the solutions should be included in your R notebook. Then, solve these additional problems using the concepts you have learned in class. For now, you should avoid using other predefined functions unless noted below.
+First, make sure you have completed all of the exercises in the above chapters. We will have already completed most of them in class. All of the solutions should be included in your R markdown report. Then, solve these additional problems using the concepts you have learned in class. For now, you should avoid using other predefined functions unless noted below.
 
-As always, your R notebook should be organized with headings and comments explaining your work.
+As always, your R markdown report should be organized with headings and comments explaining your work.
 
 1.  Write a function to find the sum of all integers between any two values. Start by writing out your plan in comment form, and then fill in the code.
 2.  List all of the prime numbers from 1 to 1000. Start by writing out your plan in comment form, and then fill in the code.
