updating week 2 based on progress in class

--- a/modules/02_programming-foundations-1.qmd
+++ b/modules/02_programming-foundations-1.qmd
@@ -21,7 +21,7 @@ Don't worry, each chapter is short!
 
 We will follow along with the examples given in the textbook. Create an R project called `programming-foundations` for this section of the course, and save today's work in an R markdown report called `part-1.Rmd`.
 
-**Key concepts:** character, numeric, vector, element, logical, for loop, while loop, if statement, `<-` vs `=` vs `==`
+**Key concepts:** character, numeric, combine, vector, element, logical, logical indexing, `<-`, !`=` vs `==`, flow control, while loop, for loop, conditional statements, if statement
 
 ## Weekly assignment
 
@@ -29,14 +29,13 @@ First, make sure you have completed all of the exercises in the above chapters. 
 
 As always, your R markdown report should be organized with headings and comments explaining your work.
 
-1. Write code that will place the numbers 1 to 100 separately into a variable using a for-loop. Then, look up the `seq()` function and use this function to do the same thing.
-2. Find the sum of all the integer numbers from 1 to 100.
+1.  Find the sum of all the integer numbers from 1 to 100.
     -   You can use the `sum()` function on a vector of numbers.
-    -   How would you do this without using the sum function? Show how you would use a for-loop to accomplish this task. 
-3. List all of the odd numbers from 1 to 100.
+    -   How would you do this without using the sum function? Show how you would use a while-loop to accomplish this task.
+2.  List all of the odd numbers from 1 to 100.
     -   How could you do this *without* using the `seq()` function? Consider using the mod function `%%`, which evaluates whether or not there is a remainder when dividing one number by another.
-4. Count the number of words in a string variable. You can use the `strsplit()` function to help.
-5. If we list all of the natural numbers between 1 and 10 that are divisible by 3 or 5, we get 3, 5, 6, and 9. The sum of these numbers is 23. Find the sum of all the multiples of 3 and 5 between 1 and 1000. 
+3.  Count the number of words in a string variable. You can use the `strsplit()` function to help.
+4.  Write code that will place the numbers 1 to 100 separately into a variable using a for-loop. Then, look up the `seq()` function and use this function to do the same thing.
+5.  If we list all of the natural numbers between 1 and 10 that are divisible by 3 or 5, we get 3, 5, 6, and 9. The sum of these numbers is 23. Find the sum of all the multiples of 3 and 5 between 1 and 1000.
 
-
-Some of these problems were adapted from this [website](https://www.crumplab.com/rstatsforpsych/practice-problems.html) and from [Project Euler](https://projecteuler.net/). 
+Some of these problems were adapted from this [website](https://www.crumplab.com/rstatsforpsych/practice-problems.html) and from [Project Euler](https://projecteuler.net/).
