changed order of modules

--- a/modules/08_data-tidying.qmd
+++ b/modules/08_data-tidying.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Tidying & Data Wrangling"
+title: "Data Tidying"
 ---
 
 ## Objectives
@@ -8,10 +8,9 @@ Here's the objective for this week.
 
 ## Readings
 
-You should read these chapters before you come to class:
+You should read this chapter before you come to class:
 
 -   *Applied Data Skills -* [Chapter 8: Data Tidying](https://psyteachr.github.io/ads-v3/08-tidy.html)
--   *Applied Data Skills -* [Chapter 9: Data Wrangling](https://psyteachr.github.io/ads-v3/09-wrangle.html)
 
 ## In-class exercises
 
